# esp32-ld2410c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  idf_component.yml  ld2410c.c
.github/workflows/: ci.yml
datasheets/: .gitattributes  HLK-LD2410C_Reference.md  LD2410C_Protocol.md  README.md
docs/: README.md  architecture.md
examples/basic/: README.md  main.c
examples/engineering_mode/: README.md  main.c
include/: ld2410c.h
test/: CMakeLists.txt  README.md  test_ld2410c.c
